--- a/examples/build.html
+++ b/examples/build.html
@@ -6,16 +6,14 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title></title>
-	<link href=https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css rel=stylesheet>
 </head>
 
 <body>
-	<pre id="app">
+	<div id="app">
 
-	</pre>
+	</div>
 </body>
-<script src=https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js></script>
-<script src="https://cdn.jsdelivr.net/npm/web-page-confirm-environment/dist/index.umd.min.js"></script>
+<script src="http://172.16.10.21:8001/index.umd.js"></script>
 
 <script>
 	const environment = new WebPageConfirmEnvironment({
@@ -25,10 +23,8 @@
     });
     // 查看全部属性
     console.log(environment.printUa())
-	console.log(environment.isPc)
 
 	document.getElementById('app').innerHTML = JSON.stringify(environment,'',4)
-
 
 </script>
 
