--- a/examples/build.html
+++ b/examples/build.html
@@ -13,7 +13,7 @@
 
 	</div>
 </body>
-<script src="http://172.16.10.21:8001/index.umd.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/web-page-confirm-environment/dist/index.umd.min.js"></script>
 
 <script>
 	const environment = new WebPageConfirmEnvironment({
