test: 修改测试代码

--- a/examples/index.html
+++ b/examples/index.html
@@ -18,7 +18,7 @@
 <script src="../dist/index.umd.js"></script>
 
 <script>
-	const environment = new WebPageConfirmEnvironment({
+	const environment = webPageConfirmEnvironment({
         // 跟自己IOS客户端 协商好的 标识。客户端打开H5往UA设置得字符串标识
         iosUa: 'very-good-ios',
         androidUa: 'very-good-android'
